--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <div class="article-entry" itemprop="articleBody">
       
         <img src="https://github.com/ccarmellia/ccarmellia.github.io/blob/main/picture.png"  width="500" height="250" /> 
+        <img src="./picture.png"  width="500" height="250" /> 
       
     </div>
     <footer class="article-footer">
